# async-recursion

./: .gitignore  .travis.yml  Cargo.toml  README.md  macro_docs.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
src/: expand.rs  lib.rs  parse.rs
tests/: args_sync.rs  compiletest.rs  core_module.rs  dyn.rs  fibonacci.rs  generic_parameters.rs  lifetimes.rs  struct_methods.rs  sync.rs  test.rs  trait_methods.rs
tests/expand/: args_not_send.expanded.rs  args_not_send.rs  args_punctuated.expanded.rs  args_punctuated.rs  args_sync.expanded.rs  args_sync.rs  core_module.expanded.rs  core_module.rs  fibonacci.expanded.rs  fibonacci.rs  generic_parameter.expanded.rs  generic_parameter.rs  generic_parameter_no_send.expanded.rs  generic_parameter_no_send.rs  lifetimes_explicit_async_recursion_bound.expanded.rs  lifetimes_explicit_async_recursion_bound.rs  lifetimes_multiple.expanded.rs  lifetimes_multiple.rs  lifetimes_nested_reference.expanded.rs  lifetimes_nested_reference.rs  lifetimes_no_send_bound.expanded.rs  lifetimes_no_send_bound.rs  macros_nested.expanded.rs  macros_nested.rs  struct_methods.expanded.rs  struct_methods.rs
tests/ui/: arg_not_sync.rs  arg_not_sync.stderr  args_invalid.rs  args_invalid.stderr  args_repeated.rs  args_repeated.stderr  must_use.stderr
